--- a/tablas.html
+++ b/tablas.html
@@ -28,7 +28,7 @@
         <table style="border: 1px solid black; border-collapse: 1px solid; width: 40%; margin: auto; color: black;"> <!--TIPOS DE LINEA: linea continua (solid), punteada (doted), de guiones (dashed)-->
             <thead>
                 <!--Insertr filas-->
-                <tr>
+                <tr style="border: 1p solid black;">
                     <th>Departamento</th>
                     <th>Codigo</th>
                     <th>Producto</th>
@@ -38,7 +38,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr style="border: 1p solid black;">
                     <td>Electronica</td>
                     <td>129867</td>
                     <td>TV 40´´</td>
